@@ -19,25 +19,36 @@
 package org.netbeans.modules.micronaut.db;
 
 import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+import com.google.gson.JsonDeserializationContext;
+import com.google.gson.JsonDeserializer;
+import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.sun.source.tree.ClassTree;
 import com.sun.source.tree.Tree;
 import com.sun.source.util.TreePath;
 import java.awt.Dialog;
 import java.io.IOException;
+import java.lang.reflect.Type;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 import javax.lang.model.element.AnnotationMirror;
+import javax.lang.model.element.Element;
+import javax.lang.model.element.ExecutableElement;
 import javax.lang.model.element.TypeElement;
 import javax.lang.model.element.VariableElement;
 import javax.lang.model.type.DeclaredType;
+import javax.lang.model.type.ExecutableType;
 import javax.lang.model.type.TypeKind;
 import javax.lang.model.type.TypeMirror;
 import javax.lang.model.util.ElementFilter;
@@ -47,18 +58,15 @@ import javax.swing.text.Document;
 import javax.swing.text.JTextComponent;
 import org.netbeans.api.editor.mimelookup.MimeRegistration;
 import org.netbeans.api.java.source.CompilationController;
+import org.netbeans.api.java.source.CompilationInfo;
 import org.netbeans.api.java.source.GeneratorUtilities;
 import org.netbeans.api.java.source.JavaSource;
-import org.netbeans.api.java.source.ModificationResult;
 import org.netbeans.api.java.source.Task;
 import org.netbeans.api.java.source.TreeUtilities;
 import org.netbeans.api.java.source.WorkingCopy;
 import org.netbeans.api.lsp.CodeAction;
 import org.netbeans.api.lsp.Command;
 import org.netbeans.api.lsp.Range;
-import org.netbeans.api.lsp.TextDocumentEdit;
-import org.netbeans.api.lsp.TextEdit;
-import org.netbeans.api.lsp.WorkspaceEdit;
 import org.netbeans.modules.parsing.api.ResultIterator;
 import org.netbeans.modules.parsing.spi.ParseException;
 import org.netbeans.spi.editor.codegen.CodeGenerator;
@@ -73,7 +81,6 @@ import org.openide.util.Exceptions;
 import org.openide.util.Lookup;
 import org.openide.util.NbBundle;
 import org.openide.util.RequestProcessor;
-import org.openide.util.Union2;
 import org.openide.util.lookup.ServiceProviders;
 import org.openide.util.lookup.ServiceProvider;
 
@@ -88,17 +95,30 @@ import org.openide.util.lookup.ServiceProvider;
 public class MicronautDataEndpointGenerator implements CodeActionProvider, CommandProvider {
 
     private static final String SOURCE = "source";
+    private static final Set<String> SUPPORTED_CODE_ACTION_KINDS = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(SOURCE)));
     private static final String CONTROLLER_ANNOTATION_NAME = "io.micronaut.http.annotation.Controller";
+    private static final String GENERATE_ENDPOINT = "nbls.micronaut.generate.endpoint";
     private static final String GENERATE_DATA_ENDPOINT = "nbls.micronaut.generate.data.endpoint";
     private static final String URI =  "uri";
     private static final String OFFSET =  "offset";
     private static final String REPOSITORIES =  "repositories";
     private static final String ENDPOINTS =  "endpoints";
+    private static final String CONTROLLER_ID =  "controllerId";
 
-    private final Gson gson = new Gson();
+    private final Gson gson = new GsonBuilder().registerTypeAdapter(NotifyDescriptor.QuickPick.Item.class, (JsonDeserializer<NotifyDescriptor.QuickPick.Item>) (JsonElement json, Type type, JsonDeserializationContext jdc) -> {
+        String label = json.getAsJsonObject().get("label").getAsString();
+        String description = json.getAsJsonObject().get("description").getAsString();;
+        return new NotifyDescriptor.QuickPick.Item(label, description);
+    }).create();
+
+    @Override
+    public Set<String> getSupportedCodeActionKinds() {
+        return SUPPORTED_CODE_ACTION_KINDS;
+    }
 
     @Override
     @NbBundle.Messages({
+        "DN_GenerateEndpoint=Generate Endpoint...",
         "DN_GenerateDataEndpoint=Generate Data Endpoint...",
         "DN_SelectEndpoints=Select endpoints to generate",
     })
@@ -128,29 +148,59 @@ public class MicronautDataEndpointGenerator implements CodeActionProvider, Comma
             if (controllerAnn == null) {
                 return Collections.emptyList();
             }
+            List<NotifyDescriptor.QuickPick.Item> endpoints = new ArrayList<>();
+            AtomicReference<String> controllerId = new AtomicReference<>();
             List<VariableElement> repositories = Utils.getRepositoriesFor(cc, te);
             if (repositories.isEmpty()) {
+                Utils.collectMissingEndpoints(cc, te, (annName, cId) -> {
+                    controllerId.set(cId);
+                    int idx = annName.lastIndexOf('.');
+                    String label = "/ -- " + (idx < 0 ? annName : annName.substring(idx + 1)).toUpperCase();
+                    String methodName = Utils.getControllerEndpointMethodName(annName);
+                    if (methodName != null) {
+                        StringBuilder sb = new StringBuilder(methodName).append('(');
+                        if ("io.micronaut.http.annotation.Put".equals(annName) || "io.micronaut.http.annotation.Post".equals(annName)) {
+                            sb.append("String value");
+                        }
+                        sb.append(')');
+                        endpoints.add(new NotifyDescriptor.QuickPick.Item(label, sb.toString()));
+                    }
+                });
+                if (!endpoints.isEmpty()) {
+                    endpoints.sort((item1, item2) -> {
+                        return item1.getDescription().compareTo(item2.getDescription());
+                    });
+                    Map<String, Object> data = new HashMap<>();
+                    data.put(URI, cc.getFileObject().toURI().toString());
+                    data.put(OFFSET, offset);
+                    data.put(CONTROLLER_ID, controllerId.get());
+                    data.put(ENDPOINTS, endpoints);
+                    return Collections.singletonList(new CodeAction(Bundle.DN_GenerateEndpoint(), SOURCE, new Command(Bundle.DN_GenerateEndpoint(), "nbls.generate.code", Arrays.asList(GENERATE_ENDPOINT, data)), null));
+                }
                 return Collections.emptyList();
             }
-            List<String> endpoints = new ArrayList<>();
-            Utils.collectMissingDataEndpoints(cc, te, null, (repository, delegateMethod, id) -> {
-                switch (delegateMethod.getSimpleName().toString()) {
-                    case "findAll":
-                        endpoints.add(id != null ? id + "/ -- GET" : "/ -- GET");
-                        break;
-                    case "findById":
-                        endpoints.add(id != null ? id + "/{id} -- GET" : "/{id} -- GET");
-                        break;
-                    case "deleteById":
-                        endpoints.add(id != null ? id + "/{id} -- DELETE" : "/{id} -- DELETE");
-                        break;
+            Utils.collectMissingDataEndpoints(cc, te, null, (repository, delegateMethod, cId, id) -> {
+                controllerId.set(cId);
+                ExecutableType delegateMethodType = (ExecutableType) cc.getTypes().asMemberOf((DeclaredType) repository.asType(), delegateMethod);
+                String value = Utils.getControllerDataEndpointAnnotationValue(delegateMethod, delegateMethodType, id);
+                String delegateMethodName = delegateMethod.getSimpleName().toString();
+                String annotationTypeName = Utils.getControllerDataEndpointAnnotationTypeName(delegateMethodName);
+                if (annotationTypeName != null) {
+                    int idx = annotationTypeName.lastIndexOf('.');
+                    String label = (value != null ? value : "/") + " -- " + (idx < 0 ? annotationTypeName.toUpperCase() : annotationTypeName.substring(idx + 1).toUpperCase());
+                    String signature = getMethodSignature(cc, delegateMethod, delegateMethodType, id);
+                    endpoints.add(new NotifyDescriptor.QuickPick.Item(label, Utils.getControllerDataEndpointMethodName(delegateMethodName, id) + signature));
                 }
             });
             if (!endpoints.isEmpty()) {
+                endpoints.sort((item1, item2) -> {
+                    return item1.getDescription().compareTo(item2.getDescription());
+                });
                 Map<String, Object> data = new HashMap<>();
                 data.put(URI, cc.getFileObject().toURI().toString());
                 data.put(OFFSET, offset);
                 data.put(REPOSITORIES, repositories.stream().map(repository -> repository.getSimpleName().toString()).collect(Collectors.toList()));
+                data.put(CONTROLLER_ID, controllerId.get());
                 data.put(ENDPOINTS, endpoints);
                 return Collections.singletonList(new CodeAction(Bundle.DN_GenerateDataEndpoint(), SOURCE, new Command(Bundle.DN_GenerateDataEndpoint(), "nbls.generate.code", Arrays.asList(GENERATE_DATA_ENDPOINT, data)), null));
             }
@@ -162,7 +212,7 @@ public class MicronautDataEndpointGenerator implements CodeActionProvider, Comma
 
     @Override
     public Set<String> getCommands() {
-        return Collections.singleton(GENERATE_DATA_ENDPOINT);
+        return Set.of(GENERATE_ENDPOINT, GENERATE_DATA_ENDPOINT);
     }
 
     @Override
@@ -181,22 +231,21 @@ public class MicronautDataEndpointGenerator implements CodeActionProvider, Comma
                     throw new IOException("Cannot get JavaSource for: " + uri);
                 }
                 int offset = data.getAsJsonPrimitive(OFFSET).getAsInt();
-                List<NotifyDescriptor.QuickPick.Item> items = Arrays.asList(gson.fromJson(data.get(ENDPOINTS), String[].class)).stream().map(endpoint -> new NotifyDescriptor.QuickPick.Item(endpoint, null)).collect(Collectors.toList());
+                List<NotifyDescriptor.QuickPick.Item> items = Arrays.asList(gson.fromJson(data.get(ENDPOINTS), NotifyDescriptor.QuickPick.Item[].class));
                 NotifyDescriptor.QuickPick pick = new NotifyDescriptor.QuickPick(Bundle.DN_GenerateDataEndpoint(), Bundle.DN_SelectEndpoints(), items, true);
                 if (DialogDescriptor.OK_OPTION != DialogDisplayer.getDefault().notify(pick)) {
                     future.complete(null);
                 } else {
-                    List<String> selectedIds = new ArrayList<>();
-                    for (NotifyDescriptor.QuickPick.Item item : pick.getItems()) {
-                        if (item.isSelected()) {
-                            selectedIds.add(item.getLabel());
-                        }
-                    }
-                    if (selectedIds.isEmpty()) {
+                    List<NotifyDescriptor.QuickPick.Item> selected = pick.getItems().stream().filter(item -> item.isSelected()).collect(Collectors.toList());
+                    if (selected.isEmpty()) {
                         future.complete(null);
-                    } else {
+                    } else if (GENERATE_DATA_ENDPOINT.equals(command)) {
                         List<String> repositoryNames = Arrays.asList(gson.fromJson(data.get(REPOSITORIES), String[].class));
-                        future.complete(modify2Edit(js, getTask(offset, repositoryNames, selectedIds)));
+                        String controllerId = data.getAsJsonPrimitive(CONTROLLER_ID).getAsString();
+                        future.complete(Utils.modify2Edit(js, getTask(offset, repositoryNames, selected, controllerId)));
+                    } else {
+                        String controllerId = data.getAsJsonPrimitive(CONTROLLER_ID).getAsString();
+                        future.complete(Utils.modify2Edit(js, getTask(offset, selected, controllerId)));
                     }
                 }
             } catch (IOException ex) {
@@ -206,7 +255,47 @@ public class MicronautDataEndpointGenerator implements CodeActionProvider, Comma
         return future;
     }
 
-    private static Task<WorkingCopy> getTask(int offset, List<String> repositoryNames, List<String> endpointIds) {
+    private static String getMethodSignature(CompilationInfo info, ExecutableElement method, ExecutableType methodType, String id) {
+        StringBuilder sb = new StringBuilder("(");
+        Iterator<? extends VariableElement> it = method.getParameters().iterator();
+        Iterator<? extends TypeMirror> tIt = methodType.getParameterTypes().iterator();
+        while (it.hasNext() && tIt.hasNext()) {
+            String paramName = it.next().getSimpleName().toString();
+            sb.append(Utils.getTypeName(info, tIt.next(), false, !it.hasNext() && method.isVarArgs()));
+            sb.append(' ').append(paramName);
+            if (it.hasNext()) {
+                sb.append(", ");
+            }
+        }
+        return sb.append(')').toString();
+    }
+
+    private static Task<WorkingCopy> getTask(int offset, List<NotifyDescriptor.QuickPick.Item> items, String controllerId) {
+        return copy -> {
+            copy.toPhase(JavaSource.Phase.ELEMENTS_RESOLVED);
+            TreePath tp = copy.getTreeUtilities().pathFor(offset);
+            tp = copy.getTreeUtilities().getPathElementOfKind(TreeUtilities.CLASS_TREE_KINDS, tp);
+            if (tp != null) {
+                ClassTree clazz = (ClassTree) tp.getLeaf();
+                TypeElement te = (TypeElement) copy.getTrees().getElement(tp);
+                if (te != null) {
+                    Set<Element> toImport = new HashSet<>();
+                    List<Tree> members = new ArrayList<>();
+                    for (NotifyDescriptor.QuickPick.Item item : items) {
+                        String description = item.getDescription();
+                        int idx = description.indexOf('(');
+                        if (idx > 0) {
+                            members.add(Utils.createControllerEndpointMethod(copy, description.substring(0, idx), controllerId, toImport));
+                        }
+                    }
+                    copy.rewrite(copy.getCompilationUnit(), GeneratorUtilities.get(copy).addImports(copy.getCompilationUnit(), toImport));
+                    copy.rewrite(clazz, GeneratorUtilities.get(copy).insertClassMembers(clazz, members, offset));
+                }
+            }
+        };
+    }
+
+    private static Task<WorkingCopy> getTask(int offset, List<String> repositoryNames, List<NotifyDescriptor.QuickPick.Item> items, String controllerId) {
         return copy -> {
             copy.toPhase(JavaSource.Phase.ELEMENTS_RESOLVED);
             TreePath tp = copy.getTreeUtilities().pathFor(offset);
@@ -216,6 +305,7 @@ public class MicronautDataEndpointGenerator implements CodeActionProvider, Comma
                 TypeElement te = (TypeElement) copy.getTrees().getElement(tp);
                 if (te != null) {
                     List<VariableElement> fields = ElementFilter.fieldsIn(te.getEnclosedElements());
+                    Set<Element> toImport = new HashSet<>();
                     List<Tree> members = new ArrayList<>();
                     for (String repositoryName : repositoryNames) {
                         VariableElement repository = fields.stream().filter(ve -> repositoryName.contentEquals(ve.getSimpleName())).findFirst().orElse(null);
@@ -230,43 +320,25 @@ public class MicronautDataEndpointGenerator implements CodeActionProvider, Comma
                                         id = id.substring(0, id.length() - 10);
                                     }
                                 }
-                                for (String endpointId : endpointIds) {
-                                    String delegateMethodName = null;
-                                    if (endpointId.equals(id != null ? id + "/ -- GET" : "/ -- GET")) {
-                                        delegateMethodName = "findAll";
-                                    } else if (endpointId.equals(id != null ? id + "/{id} -- GET" : "/{id} -- GET")) {
-                                        delegateMethodName = "findById";
-                                    } else if (endpointId.equals(id != null ? id + "/{id} -- DELETE" : "/{id} -- DELETE")) {
-                                        delegateMethodName = "deleteById";
-                                    }
-                                    if (delegateMethodName != null) {
-                                        members.add(Utils.createControllerDataEndpointMethod(copy, repositoryTypeElement, repository.getSimpleName().toString(), delegateMethodName, id));
+                                List<ExecutableElement> repositoryMethods = ElementFilter.methodsIn(copy.getElements().getAllMembers(repositoryTypeElement));
+                                for (NotifyDescriptor.QuickPick.Item item : items) {
+                                    int idx = item.getDescription().indexOf('(');
+                                    String name = item.getDescription().substring(0, idx);
+                                    String signature = item.getDescription().substring(idx);
+                                    for (ExecutableElement method : repositoryMethods) {
+                                        if (name.equals(Utils.getControllerDataEndpointMethodName(method.getSimpleName().toString(), id)) && signature.equals(getMethodSignature(copy, method, (ExecutableType) copy.getTypes().asMemberOf((DeclaredType) repositoryType, method), id))) {
+                                            members.add(Utils.createControllerDataEndpointMethod(copy, (DeclaredType) repositoryType, repository.getSimpleName().toString(), method, controllerId, id, toImport));
+                                        }
                                     }
                                 }
                             }
                         }
                     }
+                    copy.rewrite(copy.getCompilationUnit(), GeneratorUtilities.get(copy).addImports(copy.getCompilationUnit(), toImport));
                     copy.rewrite(clazz, GeneratorUtilities.get(copy).insertClassMembers(clazz, members, offset));
                 }
             }
         };
-    }
-
-    private static WorkspaceEdit modify2Edit(JavaSource js, Task<WorkingCopy> task) throws IOException {
-        FileObject[] file = new FileObject[1];
-        ModificationResult changes = js.runModificationTask(wc -> {
-            task.run(wc);
-            file[0] = wc.getFileObject();
-        });
-        List<? extends ModificationResult.Difference> diffs = changes.getDifferences(file[0]);
-        if (diffs != null) {
-            List<TextEdit> edits = new ArrayList<>();
-            for (ModificationResult.Difference diff : diffs) {
-                edits.add(new TextEdit(diff.getStartPosition().getOffset(), diff.getEndPosition().getOffset(), diff.getNewText()));
-            }
-            return new WorkspaceEdit(Collections.singletonList(Union2.createFirst(new TextDocumentEdit(file[0].toURI().toString(), edits))));
-        }
-        return null;
     }
 
     @NbBundle.Messages({
@@ -286,7 +358,7 @@ public class MicronautDataEndpointGenerator implements CodeActionProvider, Comma
         return dd;
     }
 
-    @MimeRegistration(mimeType = "text/x-java", service = CodeGenerator.Factory.class)
+    @MimeRegistration(mimeType = "text/x-java", service = CodeGenerator.Factory.class, position = 800)
     public static class Factory implements CodeGenerator.Factory {
 
         @Override
@@ -323,21 +395,25 @@ public class MicronautDataEndpointGenerator implements CodeActionProvider, Comma
             if (repositories.isEmpty()) {
                 return Collections.emptyList();
             }
-            List<String> endpoints = new ArrayList<>();
-            Utils.collectMissingDataEndpoints(cc, te, null, (repository, delegateMethod, id) -> {
-                switch (delegateMethod.getSimpleName().toString()) {
-                    case "findAll":
-                        endpoints.add(id != null ? id + "/ -- GET" : "/ -- GET");
-                        break;
-                    case "findById":
-                        endpoints.add(id != null ? id + "/{id} -- GET" : "/{id} -- GET");
-                        break;
-                    case "deleteById":
-                        endpoints.add(id != null ? id + "/{id} -- DELETE" : "/{id} -- DELETE");
-                        break;
+            AtomicReference<String> controllerId = new AtomicReference<>();
+            List<NotifyDescriptor.QuickPick.Item> endpoints = new ArrayList<>();
+            Utils.collectMissingDataEndpoints(cc, te, null, (repository, delegateMethod, cId, id) -> {
+                controllerId.set(cId);
+                ExecutableType delegateMethodType = (ExecutableType) cc.getTypes().asMemberOf((DeclaredType) repository.asType(), delegateMethod);
+                String value = Utils.getControllerDataEndpointAnnotationValue(delegateMethod, delegateMethodType, id);
+                String delegateMethodName = delegateMethod.getSimpleName().toString();
+                String annotationTypeName = Utils.getControllerDataEndpointAnnotationTypeName(delegateMethodName);
+                if (annotationTypeName != null) {
+                    int idx = annotationTypeName.lastIndexOf('.');
+                    String label = (value != null ? value : "/") + " -- " + (idx < 0 ? annotationTypeName.toUpperCase() : annotationTypeName.substring(idx + 1).toUpperCase());
+                    String signature = getMethodSignature(cc, delegateMethod, delegateMethodType, id);
+                    endpoints.add(new NotifyDescriptor.QuickPick.Item(label, Utils.getControllerDataEndpointMethodName(delegateMethodName, id) + signature));
                 }
             });
             if (!endpoints.isEmpty()) {
+                endpoints.sort((item1, item2) -> {
+                    return item1.getDescription().compareTo(item2.getDescription());
+                });
                 int offset = comp.getCaretPosition();
                 FileObject fo = cc.getFileObject();
                 List<String> repositoryNames = repositories.stream().map(repository -> repository.getSimpleName().toString()).collect(Collectors.toList());
@@ -352,7 +428,7 @@ public class MicronautDataEndpointGenerator implements CodeActionProvider, Comma
                         EndpointSelectorPanel panel = new EndpointSelectorPanel(endpoints);
                         DialogDescriptor dialogDescriptor = createDialogDescriptor(panel, Bundle.LBL_GenerateDataEndpoint());
                         panel.addPropertyChangeListener(evt -> {
-                            List<String> selected = panel.getSelectedEndpoints();
+                            List<NotifyDescriptor.QuickPick.Item> selected = panel.getSelectedEndpoints();
                             dialogDescriptor.setValid(selected != null && !selected.isEmpty());
                         });
                         Dialog dialog = DialogDisplayer.getDefault().createDialog(dialogDescriptor);
@@ -360,8 +436,8 @@ public class MicronautDataEndpointGenerator implements CodeActionProvider, Comma
                         if (dialogDescriptor.getValue() != dialogDescriptor.getDefaultValue()) {
                             return;
                         }
-                        List<String> selectedEndpoints = panel.getSelectedEndpoints();
-                        if (selectedEndpoints.isEmpty()) {
+                        List<NotifyDescriptor.QuickPick.Item> selected = panel.getSelectedEndpoints();
+                        if (selected.isEmpty()) {
                             return;
                         }
                         try {
@@ -369,7 +445,7 @@ public class MicronautDataEndpointGenerator implements CodeActionProvider, Comma
                             if (js == null) {
                                 throw new IOException("Cannot get JavaSource for: " + fo.toURL().toString());
                             }
-                            js.runModificationTask(getTask(offset, repositoryNames, selectedEndpoints)).commit();
+                            js.runModificationTask(getTask(offset, repositoryNames, selected, controllerId.get())).commit();
                         } catch (IOException | IllegalArgumentException ex) {
                             Exceptions.printStackTrace(ex);
                         }
@@ -379,4 +455,4 @@ public class MicronautDataEndpointGenerator implements CodeActionProvider, Comma
             return ret;
         }
     }
-}
+    }
