@@ -475,7 +475,7 @@ public final class PayaraDDProvider {
                 try {
                     // Formerly invoked static 'createGraph()' method, but that is merely a wrapper 
                     // for the default constructor so we'll call it directly.
-                    graphRoot = (SunBaseBean) vInfo.getImplClass().newInstance();
+                    graphRoot = (SunBaseBean) vInfo.getImplClass().getDeclaredConstructor().newInstance();
                     graphRoot.graphManager().setDoctype(vInfo.getPublicId(), vInfo.getSystemId());
 
                     Class proxyClass = vInfo.getProxyClass();
