@@ -782,14 +782,14 @@ public class Action {
                     } else if (javax.swing.Action.class.isAssignableFrom(systemActionClass)) {
                         // action implements javax.swing.Action
                         try {
-                            ((javax.swing.Action) systemActionClass.newInstance()).actionPerformed(
+                            ((javax.swing.Action) systemActionClass.getDeclaredConstructor().newInstance()).actionPerformed(
                                     new ActionEvent(new Container(), 0, null));
                         } catch (Exception e) {
                             throw new JemmyException("Exception when trying to create instance of action \"" + systemActionClass.getName() + "\".", e);
                         }
                     } else if (ActionListener.class.isAssignableFrom(systemActionClass)) {
                         try {
-                            ((ActionListener) systemActionClass.newInstance()).actionPerformed(
+                            ((ActionListener) systemActionClass.getDeclaredConstructor().newInstance()).actionPerformed(
                                     new ActionEvent(new Container(), 0, null));
                         } catch (Exception e) {
                             throw new JemmyException("Exception when trying to create instance of action \"" + systemActionClass.getName() + "\".", e);
