@@ -386,7 +386,7 @@ public class DOMBinding {
 		    try {
                 //  If cls implements Wrapper, use it first
                 if ((Wrapper.class).isAssignableFrom(cls)) {
-                    Wrapper w = (Wrapper)cls.newInstance();
+                    Wrapper w = (Wrapper)cls.getDeclaredConstructor().newInstance();
                     w.setWrapperValue(ret);
                     return w;
                 }
@@ -405,7 +405,7 @@ public class DOMBinding {
                     else
                         c = s.charAt(0);
 
-                    return new Character(c);
+                    return Character.valueOf(c);
                 }
                 if (charArrayClass.isAssignableFrom(cls))
                     return ret.toCharArray();
