@@ -23,6 +23,7 @@ import java.util.*;
 
 import java.lang.reflect.Field;
 import java.lang.reflect.Array;
+import java.lang.reflect.InvocationTargetException;
 
 import org.xml.sax.*;
 
@@ -151,7 +152,7 @@ public  class XMLGraphDeserializer extends BaseSpecificXMLDeserializer implement
     {
         super.endDocument();
 
-        this.State = new Integer(this.XGD_END);
+        this.State = this.XGD_END;
     } /*Method-End*/
 
     public   void endElement(java.lang.String name) throws org.xml.sax.SAXException
@@ -285,11 +286,11 @@ public  class XMLGraphDeserializer extends BaseSpecificXMLDeserializer implement
                 case XGD_NEED_END_ROW_ELEMENT:
 //                    System.out.println("In endElement and this.XGD_NEED_END_ROW_ELEMENT currently a no op ");
 
-                    this.State = new Integer(this.XGD_NEED_ROW_ELEMENT);
+                    this.State = this.XGD_NEED_ROW_ELEMENT;
                     break;
                 case XGD_NEED_ROW_ELEMENT:
 //                    System.out.println("In endElement and this.XGD_NEED_ROW_ELEMENT currently a no op ");
-                     this.State = new Integer(this.XGD_NEED_ROW_TAG);
+                     this.State = this.XGD_NEED_ROW_TAG;
                     break;
                 case XGD_NEED_ROW_TAG:
 //                    System.out.println("In endElement and this.XGD_NEED_ROW_TAG currently a no op ");
@@ -335,7 +336,7 @@ public  class XMLGraphDeserializer extends BaseSpecificXMLDeserializer implement
     {
         super.startDocument();
 
-        State = new Integer(this.XGD_END);
+        State = this.XGD_END;
         this.pushState(this.XGD_NEED_OBJECT);
     } /*Method-End*/
 
@@ -371,7 +372,7 @@ public  class XMLGraphDeserializer extends BaseSpecificXMLDeserializer implement
                     break;
                 case XGD_NEED_ROW_TAG:
 //                    System.out.println("In startElement and this.XGD_NEED_ROW_TAG currently a no op ");
-                    this.State = new Integer(this.XGD_NEED_ROW_ELEMENT);
+                    this.State = this.XGD_NEED_ROW_ELEMENT;
                     break;
                 //    row :  XMLRow = new;
                 //    row.Elements = new;
@@ -380,7 +381,7 @@ public  class XMLGraphDeserializer extends BaseSpecificXMLDeserializer implement
                 //    PushObject(row);
                 case XGD_NEED_ROW_ELEMENT:
 //                    System.out.println("In startElement and this.XGD_NEED_ROW_ELEMENT currently a no op ");
-                    this.State = new Integer(this.XGD_NEED_END_ROW_ELEMENT);
+                    this.State = this.XGD_NEED_END_ROW_ELEMENT;
                     break;
                 //    elm :  XMLRowElement = new;
                 //    elm.ElementNm = name;
@@ -553,7 +554,7 @@ public  class XMLGraphDeserializer extends BaseSpecificXMLDeserializer implement
             if (lRefName != null)
             {
                 this.processObjectReference(lRefName);
-                State = new Integer(this.XGD_NEED_END_OBJECT);
+                State = this.XGD_NEED_END_OBJECT;
                 return;
             }// end if
         }// end if;
@@ -588,7 +589,7 @@ public  class XMLGraphDeserializer extends BaseSpecificXMLDeserializer implement
                     if (WrapperClassHelper.isWrapperClass(lClass))
                         lObj = new WrapperClassHelper(lClass, lIDName);
                     else
-                        lObj = lClass.newInstance();
+                        lObj = lClass.getDeclaredConstructor().newInstance();
                 }
                 catch (IllegalAccessException e1)
                 {
@@ -598,7 +599,7 @@ public  class XMLGraphDeserializer extends BaseSpecificXMLDeserializer implement
                     SAXException useError = new SAXException(message);
                     throw useError;
                 }
-                catch (InstantiationException e2)
+                catch (InstantiationException | NoSuchMethodException | InvocationTargetException e2)
                 {
 
                     lObj = NewInstanceHelper.newInstance(lClassName, this.topObject());
@@ -640,7 +641,7 @@ public  class XMLGraphDeserializer extends BaseSpecificXMLDeserializer implement
 
         if (lObj == null)
         {
-               State = new Integer(this.XGD_NEED_END_OBJECT);
+            State = this.XGD_NEED_END_OBJECT;
         }
         //else if (lobj.IsA(Stringizeable) then
         //    State = XGD_NEED_STRING;
@@ -649,7 +650,7 @@ public  class XMLGraphDeserializer extends BaseSpecificXMLDeserializer implement
         //    State = XGD_NEED_ROW_TAG;
         else
         {
-            State = new Integer(this.XGD_NEED_ATTRIBUTE);
+            State = this.XGD_NEED_ATTRIBUTE;
         }
     } /*Method-End*/
 
@@ -688,7 +689,7 @@ public  class XMLGraphDeserializer extends BaseSpecificXMLDeserializer implement
                 try
                 {
                     Class lArrayTypeClass = this.findClass(lArrayType);
-                    lArray = lArrayTypeClass.newInstance();
+                    lArray = lArrayTypeClass.getDeclaredConstructor().newInstance();
                 }
                 catch (ClassNotFoundException e1)
                 {
@@ -708,7 +709,7 @@ public  class XMLGraphDeserializer extends BaseSpecificXMLDeserializer implement
                     SAXException accessError = new SAXException(message);
                     throw accessError;
                 }
-                catch (InstantiationException e3)
+                catch (InstantiationException | NoSuchMethodException | InvocationTargetException e3)
                 {
                     e3.printStackTrace();
                     //java.lang.String message = new String("Instantiation exception whilst trying to init new instance of " + lArrayType);
@@ -762,7 +763,7 @@ public  class XMLGraphDeserializer extends BaseSpecificXMLDeserializer implement
 
             this.pushRowType(lRowClassType);
             this.pushObject(lArray);
-            this.State = new Integer(this.XGD_NEED_ROW);
+            this.State = this.XGD_NEED_ROW;
         }
         else if (name.equals("NULLVALUE"))
         {
@@ -822,11 +823,11 @@ public  class XMLGraphDeserializer extends BaseSpecificXMLDeserializer implement
                     // does not declare the field anymore => ignore. 
                     this.pushObject(new Object());
                 else
-                    this.pushObject(lField.getType().newInstance());
+                    this.pushObject(lField.getType().getDeclaredConstructor().newInstance());
 
-                this.State = new Integer(this.XGD_NEED_END_NULLVALUE);
+                this.State = this.XGD_NEED_END_NULLVALUE;
             }
-            catch (InstantiationException e1)
+            catch (InstantiationException | NoSuchMethodException | InvocationTargetException e1)
             {
                 e1.printStackTrace();
                 //java.lang.String message = new String("Could not init instance of " + lField.getType().getName());
@@ -1104,7 +1105,7 @@ public  class XMLGraphDeserializer extends BaseSpecificXMLDeserializer implement
             else if (lRowType.equals("boolean")  || lRowType.equals("java.lang.Boolean"))
                 this.pushObject(Boolean.valueOf(lRowValue));
             else if (lRowType.equals("char")  || lRowType.equals("java.lang.Character"))
-                this.pushObject(new Character(lRowValue.charAt(0)));
+                this.pushObject(lRowValue.charAt(0));
             else
             {
                 System.out.println("Found and unknown type in a row");
@@ -1131,8 +1132,7 @@ public  class XMLGraphDeserializer extends BaseSpecificXMLDeserializer implement
 
     private void pushRowCount()
     {
-        Integer lInt = new Integer(0);
-        this.RowCountStack.push(lInt);
+        this.RowCountStack.push(0);
     }
 
     private void popRowCount()
@@ -1148,10 +1148,9 @@ public  class XMLGraphDeserializer extends BaseSpecificXMLDeserializer implement
 
     private void incrementRowCount()
     {
-        Integer lInt = (Integer)(this.RowCountStack.pop());
-        int lRowCount = lInt.intValue();
+        Integer lRowCount = (Integer)(this.RowCountStack.pop());
         lRowCount++;
-        this.RowCountStack.push(new Integer(lRowCount));
+        this.RowCountStack.push(lRowCount);
     }
 
     // MBO: added new class WrapperClassHelper.
@@ -1189,7 +1188,7 @@ public  class XMLGraphDeserializer extends BaseSpecificXMLDeserializer implement
                                { return Short.valueOf(s); } });
             converters.put(Character.class,
                            new Converter() { public Object valueOf(String s) 
-                               { return new Character(s.charAt(0)); } });
+                               { return Character.valueOf(s.charAt(0)); } });
             converters.put(Integer.class,
                            new Converter() { public Object valueOf(String s) 
                                { return Integer.valueOf(s); } });
