@@ -149,12 +149,8 @@ public class AgentWorker extends RemoteExecutionControl implements Executor, Run
         } else if (o instanceof String) {
             try {
                 Class executorClazz = Class.forName((String)o);
-                return (Executor)executorClazz.newInstance();
-            } catch (ClassNotFoundException ex) {
-                LOG.log(Level.SEVERE, null, ex);
-            } catch (InstantiationException ex) {
-                LOG.log(Level.SEVERE, null, ex);
-            } catch (IllegalAccessException ex) {
+                return (Executor)executorClazz.getDeclaredConstructor().newInstance();
+            } catch (ReflectiveOperationException ex) {
                 LOG.log(Level.SEVERE, null, ex);
             }
         }
@@ -223,7 +219,7 @@ public class AgentWorker extends RemoteExecutionControl implements Executor, Run
     private void installNewClassLoader(ClassLoader delegate) {
         lastClassLoader = delegate;
         loader = new NbRemoteLoader(delegate, loader, 
-                additionalClasspath.toArray(new URL[additionalClasspath.size()]));
+                additionalClasspath.toArray(new URL[0]));
     }
 
     @Override
@@ -466,11 +462,12 @@ public class AgentWorker extends RemoteExecutionControl implements Executor, Run
                 userCodeExecutingThreads.put(socketPort, Thread.currentThread());
             }
             return super.invoke(className, methodName);
-        } catch (ThreadDeath td) {
-            LOG.log(Level.FINE, "Received ThreadDeath, killed: {0}", killed);
-            if (!killed.get()) {
-                throw td;
-            }
+        // TODO this code relied on performStop() calling Thread.stop()
+//        } catch (ThreadDeath td) {
+//            LOG.log(Level.FINE, "Received ThreadDeath, killed: {0}", killed);
+//            if (!killed.get()) {
+//                throw td;
+//            }
         } catch (ExecutionControlException ex) {
             throw ex; 
         } catch (Throwable t) {
@@ -489,8 +486,7 @@ public class AgentWorker extends RemoteExecutionControl implements Executor, Run
         synchronized (userCodeExecutingThreads) {
             targetThread = userCodeExecutingThreads.remove(agentId);
             if (targetThread != null) {
-                // throw ThreadDeath in the target thread
-                targetThread.stop();
+                targetThread.interrupt(); // was: Thread.stop()
             }
         }
         if (targetThread == null) {
