@@ -19,13 +19,12 @@
 package org.netbeans.modules.maven.execute.ui;
 
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.StringTokenizer;
 import javax.swing.SwingUtilities;
-import org.codehaus.plexus.util.StringUtils;
 import org.netbeans.api.project.Project;
 import org.netbeans.modules.maven.NbMavenProjectImpl;
 import org.netbeans.modules.maven.TextValueCompleter;
@@ -50,46 +49,41 @@ public class RunGoalsPanel extends javax.swing.JPanel {
 
     private static final RequestProcessor RP = new RequestProcessor(RunGoalsPanel.class);
 
-    private List<NetbeansActionMapping> historyMappings;
+    private final List<NetbeansActionMapping> historyMappings;
     private int historyIndex = 0;
     private TextValueCompleter goalcompleter;
-    private TextValueCompleter profilecompleter;
+    private final TextValueCompleter profilecompleter;
     private NbMavenProjectImpl project;
 
     /** Creates new form RunGoalsPanel */
     public RunGoalsPanel() {
         initComponents();
         cbRememberActionPerformed(null);
-        historyMappings = new ArrayList<NetbeansActionMapping>();
+        historyMappings = new ArrayList<>();
         btnPrev.setIcon(ImageUtilities.loadImageIcon("org/netbeans/modules/maven/execute/back.png", false)); //NOI18N
         btnNext.setIcon(ImageUtilities.loadImageIcon("org/netbeans/modules/maven/execute/forward.png", false)); //NOI18N
 
-        goalcompleter = new TextValueCompleter(new ArrayList<String>(0), txtGoals, " "); //NOI18N
+        goalcompleter = new TextValueCompleter(new ArrayList<>(0), txtGoals, " "); //NOI18N
         goalcompleter.setLoading(true);
         // doing lazy.. 
-        RP.post(new Runnable() {
-            @Override public void run() {
-                GoalsProvider provider = Lookup.getDefault().lookup(GoalsProvider.class);
-                if (provider != null) {
-                    final Set<String> strs = provider.getAvailableGoals();
-                    try {
-                        List<String> phases = EmbedderFactory.getProjectEmbedder().getLifecyclePhases();
-                        strs.addAll(phases);
-                    } catch (Exception e) {
-                        // oh wel just ignore..
-                        e.printStackTrace();
-                    }
-                    SwingUtilities.invokeLater(new Runnable() {
-                        @Override
-                        public void run() {
-                            goalcompleter.setValueList(strs, false);//do not bother about partial results, too many intermediate apis..
-                        }
-                    });
+        RP.post(() -> {
+            GoalsProvider provider = Lookup.getDefault().lookup(GoalsProvider.class);
+            if (provider != null) {
+                Set<String> strs = new HashSet<>(provider.getAvailableGoals());
+                try {
+                    List<String> phases = EmbedderFactory.getProjectEmbedder().getLifecyclePhases();
+                    strs.addAll(phases);
+                } catch (Exception e) {
+                    // oh wel just ignore..
+                    e.printStackTrace();
                 }
+                SwingUtilities.invokeLater(() -> {
+                    goalcompleter.setValueList(strs, false);//do not bother about partial results, too many intermediate apis..
+                });
             }
         });
 
-        profilecompleter = new TextValueCompleter(new ArrayList<String>(0), txtProfiles, " ");
+        profilecompleter = new TextValueCompleter(new ArrayList<>(0), txtProfiles, " ");
     }
 
     @Override
@@ -101,18 +95,12 @@ public class RunGoalsPanel extends javax.swing.JPanel {
 
     private void readProfiles(final Project mavenProject) {
         profilecompleter.setLoading(true);
-        RP.post(new Runnable() {
-            @Override public void run() {
-                ProjectProfileHandler profileHandler = mavenProject.getLookup().lookup(ProjectProfileHandler.class);
-                final List<String> ret = profileHandler.getAllProfiles();
-                
-                SwingUtilities.invokeLater(new Runnable() {
-                    @Override
-                    public void run() {
-                        profilecompleter.setValueList(ret, false);
-                    }
-                });
-            }
+        RP.post(() -> {
+            ProjectProfileHandler profileHandler = mavenProject.getLookup().lookup(ProjectProfileHandler.class);
+            List<String> ret = profileHandler.getAllProfiles();
+            SwingUtilities.invokeLater(() -> {
+                profilecompleter.setValueList(ret, false);
+            });
         });
     }
 
@@ -158,7 +146,7 @@ public class RunGoalsPanel extends javax.swing.JPanel {
         txtProfiles.setText(createSpaceSeparatedList(config.getActivatedProfiles()));
         
         setUpdateSnapshots(config.isUpdateSnapshots());
-        setOffline(config.isOffline() != null ? config.isOffline().booleanValue() : false);
+        setOffline(config.isOffline() != null ? config.isOffline() : false);
         setRecursive(config.isRecursive());
         setShowDebug(config.isShowDebug());
         if(config.getProject()!=null){
@@ -181,17 +169,17 @@ public class RunGoalsPanel extends javax.swing.JPanel {
     }
 
     public void applyValues(NetbeansActionMapping mapp) {
-        StringTokenizer tok = new StringTokenizer(txtGoals.getText().trim());
-        List<String> lst = new ArrayList<String>();
+        StringTokenizer tok = new StringTokenizer(txtGoals.getText().strip());
+        List<String> lst = new ArrayList<>();
         while (tok.hasMoreTokens()) {
             lst.add(tok.nextToken());
         }
-        mapp.setGoals(lst.size() > 0 ? lst : null);
+        mapp.setGoals(!lst.isEmpty() ? lst : null);
 
         mapp.setProperties(ActionMappings.convertStringToActionProperties(epProperties.getText()));
 
-        tok = new StringTokenizer(txtProfiles.getText().trim(), " ,");
-        lst = new ArrayList<String>();
+        tok = new StringTokenizer(txtProfiles.getText().strip(), " ,");
+        lst = new ArrayList<>();
         while (tok.hasMoreTokens()) {
             lst.add(tok.nextToken());
         }
@@ -201,32 +189,37 @@ public class RunGoalsPanel extends javax.swing.JPanel {
     }
 
     public void applyValues(BeanRunConfig rc) {
-        StringTokenizer tok = new StringTokenizer(txtGoals.getText().trim());
-        List<String> lst = new ArrayList<String>();
+        StringTokenizer tok = new StringTokenizer(txtGoals.getText().strip());
+        List<String> lst = new ArrayList<>();
         while (tok.hasMoreTokens()) {
             lst.add(tok.nextToken());
         }
-        rc.setGoals(lst.size() > 0 ? lst : Collections.singletonList("install")); //NOI18N
-        tok = new StringTokenizer(txtProfiles.getText().trim());
-        lst = new ArrayList<String>();
+        rc.setGoals(!lst.isEmpty() ? lst : List.of("install")); //NOI18N
+        tok = new StringTokenizer(txtProfiles.getText().strip());
+        lst = new ArrayList<>();
         while (tok.hasMoreTokens()) {
             lst.add(tok.nextToken());
         }
         rc.setActivatedProfiles(lst);
 
+        // clear props in case of removal or changed order
+        for (String prop : new ArrayList<>(rc.getProperties().keySet())) {
+            rc.setProperty(prop, null);
+        }
         PropertySplitter split = new PropertySplitter(epProperties.getText());
         String token = split.nextPair();
         while (token != null) {
-            String[] prp = StringUtils.split(token, "=", 2); //NOI18N
-            if (prp.length == 2) {
+            String[] prp = token.split("=", 2); //NOI18N
+            if (prp.length == 2 && !prp[0].isBlank()) {
                 rc.setProperty(prp[0], prp[1]);
             }
             token = split.nextPair();
         }
+
         rc.setRecursive(isRecursive());
         rc.setShowDebug(isShowDebug());
         rc.setUpdateSnapshots(isUpdateSnapshots());
-        rc.setOffline(Boolean.valueOf(isOffline()));
+        rc.setOffline(isOffline());
     }
 
     /** This method is called from within the constructor to
@@ -281,35 +274,19 @@ public class RunGoalsPanel extends javax.swing.JPanel {
 
         btnNext.setToolTipText(org.openide.util.NbBundle.getMessage(RunGoalsPanel.class, "TIP_Next")); // NOI18N
         btnNext.setMargin(new java.awt.Insets(2, 2, 2, 2));
-        btnNext.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(java.awt.event.ActionEvent evt) {
-                btnNextActionPerformed(evt);
-            }
-        });
+        btnNext.addActionListener(this::btnNextActionPerformed);
 
         btnPrev.setToolTipText(org.openide.util.NbBundle.getMessage(RunGoalsPanel.class, "TIP_Prev")); // NOI18N
         btnPrev.setMargin(new java.awt.Insets(2, 2, 2, 2));
-        btnPrev.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(java.awt.event.ActionEvent evt) {
-                btnPrevActionPerformed(evt);
-            }
-        });
+        btnPrev.addActionListener(this::btnPrevActionPerformed);
 
         org.openide.awt.Mnemonics.setLocalizedText(cbRemember, org.openide.util.NbBundle.getMessage(RunGoalsPanel.class, "LBL_Remember")); // NOI18N
         cbRemember.setBorder(javax.swing.BorderFactory.createEmptyBorder(0, 0, 0, 0));
         cbRemember.setMargin(new java.awt.Insets(0, 0, 0, 0));
-        cbRemember.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(java.awt.event.ActionEvent evt) {
-                cbRememberActionPerformed(evt);
-            }
-        });
+        cbRemember.addActionListener(this::cbRememberActionPerformed);
 
         org.openide.awt.Mnemonics.setLocalizedText(btnAddProps, "&Add >");
-        btnAddProps.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(java.awt.event.ActionEvent evt) {
-                btnAddPropsActionPerformed(evt);
-            }
-        });
+        btnAddProps.addActionListener(this::btnAddPropsActionPerformed);
 
         epProperties.setContentType("text/x-properties"); // NOI18N
         jScrollPane2.setViewportView(epProperties);
@@ -331,15 +308,19 @@ public class RunGoalsPanel extends javax.swing.JPanel {
                             .addComponent(cbUpdateSnapshots)))
                     .addGroup(layout.createSequentialGroup()
                         .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-                            .addComponent(lblGoals)
-                            .addComponent(lblProfiles)
-                            .addComponent(jLabel2)
-                            .addComponent(btnAddProps))
-                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
+                            .addGroup(layout.createSequentialGroup()
+                                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                                    .addComponent(lblGoals)
+                                    .addComponent(lblProfiles)
+                                    .addComponent(jLabel2))
+                                .addGap(13, 13, 13))
+                            .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, layout.createSequentialGroup()
+                                .addComponent(btnAddProps)
+                                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)))
                         .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                             .addComponent(txtGoals)
                             .addComponent(txtProfiles)
-                            .addComponent(jScrollPane2)))
+                            .addComponent(jScrollPane2, javax.swing.GroupLayout.DEFAULT_SIZE, 540, Short.MAX_VALUE)))
                     .addGroup(layout.createSequentialGroup()
                         .addComponent(btnPrev)
                         .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
@@ -347,7 +328,7 @@ public class RunGoalsPanel extends javax.swing.JPanel {
                         .addGap(52, 52, 52)
                         .addComponent(cbRemember)
                         .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
-                        .addComponent(txtRemember, javax.swing.GroupLayout.DEFAULT_SIZE, 275, Short.MAX_VALUE))
+                        .addComponent(txtRemember))
                     .addComponent(jSeparator1))
                 .addContainerGap())
         );
@@ -363,12 +344,12 @@ public class RunGoalsPanel extends javax.swing.JPanel {
                     .addComponent(lblProfiles)
                     .addComponent(txtProfiles, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
                 .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
-                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING, false)
+                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                     .addGroup(layout.createSequentialGroup()
                         .addComponent(jLabel2)
-                        .addGap(39, 39, 39)
+                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
                         .addComponent(btnAddProps))
-                    .addComponent(jScrollPane2))
+                    .addComponent(jScrollPane2, javax.swing.GroupLayout.DEFAULT_SIZE, 130, Short.MAX_VALUE))
                 .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.UNRELATED)
                 .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                     .addComponent(cbRecursive)
@@ -377,7 +358,7 @@ public class RunGoalsPanel extends javax.swing.JPanel {
                 .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                     .addComponent(cbOffline)
                     .addComponent(cbDebug))
-                .addGap(34, 34, 34)
+                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.UNRELATED)
                 .addComponent(jSeparator1, javax.swing.GroupLayout.PREFERRED_SIZE, 10, javax.swing.GroupLayout.PREFERRED_SIZE)
                 .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                 .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
@@ -385,7 +366,7 @@ public class RunGoalsPanel extends javax.swing.JPanel {
                     .addComponent(btnNext)
                     .addComponent(cbRemember)
                     .addComponent(txtRemember, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
-                .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
+                .addContainerGap())
         );
     }// </editor-fold>//GEN-END:initComponents
 
@@ -411,6 +392,13 @@ public class RunGoalsPanel extends javax.swing.JPanel {
     private void cbRememberActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_cbRememberActionPerformed
         txtRemember.setEnabled(cbRemember.isSelected());
     }//GEN-LAST:event_cbRememberActionPerformed
+
+    public void showPersistenceBar(boolean show) {
+        btnNext.setVisible(show);
+        btnPrev.setVisible(show);
+        cbRemember.setVisible(show);
+        txtRemember.setVisible(show);
+    }
 
     public boolean isOffline() {
         return cbOffline.isSelected();
@@ -446,8 +434,8 @@ public class RunGoalsPanel extends javax.swing.JPanel {
 
     public String isRememberedAs() {
         if (cbRemember.isSelected()) {
-            String txt = txtRemember.getText().trim();
-            if (txt.length() > 0) {
+            String txt = txtRemember.getText().strip();
+            if (!txt.isEmpty()) {
                 return txt;
             }
         }
