@@ -120,7 +120,7 @@ public abstract class IOProvider {
         if (cl != null) {
             try {
                 Class<? extends Object> c = Class.forName(className, true, cl);
-                Object instance = c.newInstance();
+                Object instance = c.getDeclaredConstructor().newInstance();
                 Method m = c.getDeclaredMethod(methodName, paramTypes);
                 Object result = m.invoke(instance, params);
                 if (result instanceof InputOutputProvider) {
@@ -181,7 +181,7 @@ public abstract class IOProvider {
      * getters on the returned instance.
      *
      * @param name A localised display name for the tab.
-     * @param newIO If <tt>true</tt>, a new <code>InputOutput</code> is
+     * @param newIO If <code>true</code>, a new <code>InputOutput</code> is
      * returned, else an existing <code>InputOutput</code> of the same name may
      * be returned.
      * @return An <code>InputOutput</code> instance for accessing the new tab.
@@ -196,7 +196,7 @@ public abstract class IOProvider {
      * getters on the returned instance.
      *
      * @param name A localised display name for the tab.
-     * @param newIO If <tt>true</tt>, a new <code>InputOutput</code> is
+     * @param newIO If <code>true</code>, a new <code>InputOutput</code> is
      * returned, else an existing <code>InputOutput</code> of the same name may
      * be returned.
      * @param lookup Lookup which may contain additional information for various
