@@ -358,7 +358,7 @@ public class NbBundle extends Object {
     * safer when used from a module as this method relies on the module's
     * classloader to currently be part of the system classloader. NetBeans
     * does add enabled modules to this classloader, however calls to
-    * this variant of the method made in <a href="@org-openide-modules@/org/openide/modules/ModuleInstall.html#validate--">ModuleInstall.validate</a>,
+    * this variant of the method made in <a href="@org-openide-modules@/org/openide/modules/ModuleInstall.html#validate()">ModuleInstall.validate</a>,
     * or made soon after a module is uninstalled (due to background threads)
     * could fail unexpectedly.
     * @param baseName bundle basename
@@ -602,7 +602,7 @@ public class NbBundle extends Object {
         for (String suffix : suffixes) {
             try {
                 Class<? extends ResourceBundle> c = Class.forName(name + suffix, true, l).asSubclass(ResourceBundle.class);
-                ResourceBundle b = c.newInstance();
+                ResourceBundle b = c.getDeclaredConstructor().newInstance();
 
                 if (master == null) {
                     master = b;
